--- a/Scoops/Storyboards/TimeLine.storyboard
+++ b/Scoops/Storyboards/TimeLine.storyboard
@@ -233,18 +233,18 @@
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="BYC-uE-xVn">
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="BYC-uE-xVn">
                                 <rect key="frame" x="16" y="558" width="343" height="28"/>
                                 <color key="backgroundColor" red="0.0" green="0.50196081400000003" blue="1" alpha="1" colorSpace="calibratedRGB"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="28" id="7A1-kp-CMT"/>
                                 </constraints>
-                                <fontDescription key="fontDescription" type="boldSystem" pointSize="15"/>
-                                <state key="normal" title="Login">
+                                <fontDescription key="fontDescription" type="boldSystem" pointSize="18"/>
+                                <state key="normal" title="Login con Google">
                                     <color key="titleColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
                                 </state>
                                 <connections>
-                                    <action selector="doLogin:" destination="fLW-Lw-7kL" eventType="touchUpInside" id="IHL-6M-knG"/>
+                                    <action selector="doLoginGoogle:" destination="fLW-Lw-7kL" eventType="touchUpInside" id="RNY-xF-viK"/>
                                 </connections>
                             </button>
                             <imageView opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" image="BackgroundLogo" translatesAutoresizingMaskIntoConstraints="NO" id="P1b-Dn-NhB">
@@ -254,18 +254,36 @@
                                     <constraint firstAttribute="width" constant="300" id="qn0-Vt-4bf"/>
                                 </constraints>
                             </imageView>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="6ha-Ks-ujF">
+                                <rect key="frame" x="16" y="588" width="343" height="28"/>
+                                <color key="backgroundColor" red="0.0" green="0.50196081400000003" blue="1" alpha="1" colorSpace="calibratedRGB"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="28" id="8vG-tS-89o"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" type="boldSystem" pointSize="18"/>
+                                <state key="normal" title="Login con Email">
+                                    <color key="titleColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
+                                </state>
+                                <connections>
+                                    <action selector="doLoginEmail:" destination="fLW-Lw-7kL" eventType="touchUpInside" id="v5j-Fp-oea"/>
+                                </connections>
+                            </button>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                         <constraints>
                             <constraint firstItem="BYC-uE-xVn" firstAttribute="top" secondItem="bFK-td-ot8" secondAttribute="bottom" constant="494" id="3me-Q3-CGZ"/>
                             <constraint firstItem="BYC-uE-xVn" firstAttribute="top" secondItem="P1b-Dn-NhB" secondAttribute="bottom" constant="80" id="4Df-iE-sLG"/>
+                            <constraint firstItem="6ha-Ks-ujF" firstAttribute="top" secondItem="BYC-uE-xVn" secondAttribute="bottom" constant="2" id="Fql-zM-J3G"/>
+                            <constraint firstAttribute="trailingMargin" secondItem="6ha-Ks-ujF" secondAttribute="trailing" id="MKY-2l-Vun"/>
                             <constraint firstItem="P1b-Dn-NhB" firstAttribute="centerX" secondItem="ige-kO-wbJ" secondAttribute="centerX" id="RO7-qa-jYa"/>
+                            <constraint firstItem="6ha-Ks-ujF" firstAttribute="leading" secondItem="ige-kO-wbJ" secondAttribute="leadingMargin" id="ZML-PF-cKP"/>
                             <constraint firstAttribute="leadingMargin" secondItem="BYC-uE-xVn" secondAttribute="leading" id="gnc-Lb-zNg"/>
                             <constraint firstAttribute="trailingMargin" secondItem="BYC-uE-xVn" secondAttribute="trailing" id="hAz-rP-UvO"/>
                         </constraints>
                     </view>
                     <navigationItem key="navigationItem" id="c7O-Le-QnV"/>
                     <connections>
+                        <outlet property="googleBtnSignIn" destination="BYC-uE-xVn" id="zI9-Jb-Whs"/>
                         <segue destination="WTr-km-IDr" kind="show" identifier="launchWithLogged" id="Q1z-hd-ylF"/>
                     </connections>
                 </viewController>
