--- a/Scoops/Storyboards/TimeLine.storyboard
+++ b/Scoops/Storyboards/TimeLine.storyboard
@@ -289,6 +289,9 @@
                                 <state key="normal" title="Logout">
                                     <color key="titleColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
                                 </state>
+                                <connections>
+                                    <action selector="doLogin:" destination="fLW-Lw-7kL" eventType="touchUpInside" id="ggP-h1-pDf"/>
+                                </connections>
                             </button>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
